remove markd requirement and auto add modal to dom

--- a/vern.html
+++ b/vern.html
@@ -15,7 +15,7 @@
     </ul>
     <div class="tab-content">
       <div class="tab-pane active" id="History">
-        {{> History }}
+        {{ vern_info_tpl "History" }}
       </div>
     </div>
   </div>
