--- a/vern.html
+++ b/vern.html
@@ -15,7 +15,7 @@
     </ul>
     <div class="tab-content">
       <div class="tab-pane active" id="History">
-        {{ vern_info_tpl "History" }}
+        {{> History}}
       </div>
     </div>
   </div>
